--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,19 +6,9 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10850
-    udp: true
-    password: b1169481-07ac-4eff-91f2-4306aa1c545c
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id002
-    name: 🇺🇸_US_美国_1
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度
     type: vmess
-    server: mm3.shabijichang.com
+    server: mm2.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -29,62 +19,11 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: mm3.shabijichang.com
-  - &id003
-    name: 🇮🇷_IR_伊朗->🇫🇷_FR_法国
+        host: mm2.shabijichang.com
+  - &id002
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: 78.39.56.6
-    port: 46585
-    cipher: auto
-    uuid: 05af75d7-4c45-4222-b245-d36c5618135d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id004
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10838
-    udp: true
-    password: b1169481-07ac-4eff-91f2-4306aa1c545c
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id005
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10837
-    udp: true
-    password: b1169481-07ac-4eff-91f2-4306aa1c545c
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id006
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10845
-    udp: true
-    password: b1169481-07ac-4eff-91f2-4306aa1c545c
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id007
-    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10848
-    udp: true
-    password: b1169481-07ac-4eff-91f2-4306aa1c545c
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id008
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 104.21.75.246
+    server: sbl2.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -96,18 +35,37 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id009
-    name: 🇹🇷_TR_土耳其
+  - &id003
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: 193.46.56.210
-    port: 8443
+    server: a7.wxlljc520.com
+    port: 443
     cipher: auto
-    uuid: b72694db-ed21-46c1-8923-325305fa787f
+    uuid: b0e43362-72b7-49ac-8eb6-fff69e07cfae
     alterId: 0
     tls: true
     skip-cert-verify: true
-    network: tcp
-  - &id010
+    network: ws
+    ws-opts:
+      path: /apple
+      headers:
+        host: 777.golinkwuxian.top
+  - &id004
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: a8.wxlljc520.com
+    port: 443
+    cipher: auto
+    uuid: b0e43362-72b7-49ac-8eb6-fff69e07cfae
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /apple
+      headers:
+        host: 777.golinkwuxian.top
+  - &id005
     name: 🇨🇳_CN_中国->🇬🇧_GB_英国
     type: vmess
     server: 112.29.94.23
@@ -118,21 +76,17 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id011
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+  - &id006
+    name: 🇩🇪_DE_德国
     type: vmess
-    server: ld2.shabijichang.com
-    port: 80
+    server: 5.78.70.196
+    port: 3389
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ld2.shabijichang.com
+    network: http
 proxy-groups:
   - name: PROXY
     type: select
@@ -165,11 +119,6 @@ proxy-groups:
       - *id004
       - *id005
       - *id006
-      - *id007
-      - *id008
-      - *id009
-      - *id010
-      - *id011
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -181,11 +130,6 @@ proxy-groups:
       - *id004
       - *id005
       - *id006
-      - *id007
-      - *id008
-      - *id009
-      - *id010
-      - *id011
   - name: SELECT
     type: select
     proxies:
@@ -195,11 +139,6 @@ proxy-groups:
       - *id004
       - *id005
       - *id006
-      - *id007
-      - *id008
-      - *id009
-      - *id010
-      - *id011
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
