--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,41 +6,9 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇫🇷_FR_法国
-    type: trojan
-    server: 35.181.109.150
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id002
-    name: 🇭🇰_HK_香港->🇨🇦_CA_加拿大
-    type: trojan
-    server: ca.liangyuandiancloud.com
-    port: 443
-    udp: true
-    password: 4f2f34cc-d2e9-4ca8-a687-68efe5ad5959
-    skip-cert-verify: true
-    network: tcp
-  - &id003
-    name: 🇬🇧_GB_英国_1
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
     type: vmess
-    server: 172.99.190.109
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: linkvws
-  - &id004
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 104.21.75.246
+    server: mm3.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -51,9 +19,9 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: sbl2.shabijichang.com
-  - &id005
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
+        host: mm3.shabijichang.com
+  - &id002
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
     type: vmess
     server: mrb2.shabijichang.com
     port: 80
@@ -67,15 +35,62 @@ proxies:
       path: /
       headers:
         host: mrb2.shabijichang.com
-  - &id006
-    name: 🇭🇰_HK_香港->🇫🇷_FR_法国
-    type: trojan
-    server: uk.liangyuandiancloud.com
-    port: 443
-    udp: true
-    password: 4f2f34cc-d2e9-4ca8-a687-68efe5ad5959
+  - &id003
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
+    type: vmess
+    server: mm2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mm2.shabijichang.com
+  - &id004
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
+    type: vmess
+    server: 156.225.67.96
+    port: 443
+    cipher: auto
+    uuid: 5a4d69ad-20a9-4941-b223-87bbd09f5f52
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1696251693048
+  - &id005
+    name: 🇳🇱_NL_荷兰
+    type: vmess
+    server: 154.85.1.130
+    port: 30000
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1698843555400
+  - &id006
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 104.22.75.105
+    port: 8880
+    cipher: auto
+    uuid: 617c9bc4-4116-41c6-99e0-ace49a38fcdb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /Jnv8ViZOUVgijjOh0p5uGjHnXIiY
+      headers:
+        host: fr7.tehme100.fun
   - &id007
     name: 🇺🇸_US_美国_2
     type: vmess
@@ -91,100 +106,6 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id008
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国
-    type: trojan
-    server: usa.liangyuandiancloud.com
-    port: 443
-    udp: true
-    password: 4f2f34cc-d2e9-4ca8-a687-68efe5ad5959
-    skip-cert-verify: true
-    network: tcp
-  - &id009
-    name: 🇬🇧_GB_英国_2
-    type: trojan
-    server: 18.130.141.82
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id010
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
-    type: vmess
-    server: mm3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mm3.shabijichang.com
-  - &id011
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
-    type: vmess
-    server: family.mgtajhiz.ir
-    port: 2052
-    cipher: auto
-    uuid: 544f2e93-51b0-4d47-fd72-e7d858021bbd
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: family.mgtajhiz.ir
-  - &id012
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: ld2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ld2.shabijichang.com
-  - &id013
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
-    type: vmess
-    server: mm2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mm2.shabijichang.com
-  - &id014
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: cfcdn1.sanfencdn9.com
-    port: 2052
-    cipher: auto
-    uuid: 4c0699aa-790e-4ccc-b9aa-5cff4b1165e3
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/MNBrTghv
-      headers:
-        host: tw135037538.pkmkwvxqnn.xyz
 proxy-groups:
   - name: PROXY
     type: select
@@ -218,13 +139,6 @@ proxy-groups:
       - *id005
       - *id006
       - *id007
-      - *id008
-      - *id009
-      - *id010
-      - *id011
-      - *id012
-      - *id013
-      - *id014
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -237,13 +151,6 @@ proxy-groups:
       - *id005
       - *id006
       - *id007
-      - *id008
-      - *id009
-      - *id010
-      - *id011
-      - *id012
-      - *id013
-      - *id014
   - name: SELECT
     type: select
     proxies:
@@ -254,13 +161,6 @@ proxy-groups:
       - *id005
       - *id006
       - *id007
-      - *id008
-      - *id009
-      - *id010
-      - *id011
-      - *id012
-      - *id013
-      - *id014
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
