--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,105 +6,259 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 104.21.75.246
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
+  - &id002
     name: 🇫🇷_FR_法国_1
     type: ss
-    server: 51.159.210.173
-    port: 443
+    server: 51.158.195.96
+    port: 110
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id002
+  - &id003
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: a8.wxlljc520.com
+    port: 443
+    cipher: auto
+    uuid: b0e43362-72b7-49ac-8eb6-fff69e07cfae
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: golinkwuxian.top
+    network: ws
+    ws-opts:
+      path: /apple
+      headers:
+        host: 777.golinkwuxian.top
+  - &id004
     name: 🇬🇧_GB_英国_1
     type: ss
     server: 198.244.228.191
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id003
+  - &id005
     name: 🇬🇧_GB_英国_2
+    type: vmess
+    server: 172.99.190.109
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: linkvws
+  - &id006
+    name: 🇫🇷_FR_法国_2
+    type: trojan
+    server: 35.181.180.226
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id007
+    name: 🇫🇷_FR_法国_3
     type: ss
-    server: 198.244.231.24
+    server: 51.158.202.253
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id004
-    name: 🇯🇵_JP_日本->🇺🇸_US_美国_1
-    type: vmess
-    server: aa9.wuxianliulianng.xyz
-    port: 443
-    cipher: auto
-    uuid: b0e43362-72b7-49ac-8eb6-fff69e07cfae
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: golinkwuxian.top
-    network: ws
-    ws-opts:
-      path: /apple
-      headers:
-        host: 555.golinkwuxian.top
-  - &id005
-    name: 🇯🇵_JP_日本->🇺🇸_US_美国_2
-    type: vmess
-    server: aa1.wuxianliulianng.xyz
-    port: 443
-    cipher: auto
-    uuid: b0e43362-72b7-49ac-8eb6-fff69e07cfae
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: golinkwuxian.top
-    network: ws
-    ws-opts:
-      path: /apple
-      headers:
-        host: 111.golinkwuxian.top
-  - &id006
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: c1.wuxianliulianng.xyz
-    port: 443
-    cipher: auto
-    uuid: b0e43362-72b7-49ac-8eb6-fff69e07cfae
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: golinkwuxian.top
-    network: ws
-    ws-opts:
-      path: /apple
-      headers:
-        host: 111.golinkwuxian.top
-  - &id007
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
-    type: vmess
-    server: 156.225.67.96
-    port: 443
-    cipher: auto
-    uuid: 5a4d69ad-20a9-4941-b223-87bbd09f5f52
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1696251693048
   - &id008
-    name: 🇬🇧_GB_英国->🇺🇸_US_美国
-    type: vmess
-    server: aa2.wuxianliulianng.xyz
+    name: 🇺🇸_US_美国_3
+    type: ss
+    server: 95.164.87.138
+    port: 63830
+    password: dPW6SKhVfqDevBfdrt5eJg
+    cipher: chacha20-ietf-poly1305
+  - &id009
+    name: 🇹🇷_TR_土耳其
+    type: ss
+    server: 94.131.108.237
+    port: 46041
+    password: cDewnplB4DhF7VjzDIdMFf
+    cipher: chacha20-ietf-poly1305
+  - &id010
+    name: 🇫🇷_FR_法国_4
+    type: ss
+    server: 51.158.203.6
     port: 443
-    cipher: auto
-    uuid: b0e43362-72b7-49ac-8eb6-fff69e07cfae
-    alterId: 0
-    tls: true
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id011
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: ssr
+    server: 120.240.88.111
+    port: 7701
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id012
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: ssr
+    server: 120.240.88.111
+    port: 7706
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id013
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: ssr
+    server: cm01.newcome.xyz
+    port: 7703
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id014
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
+    type: ssr
+    server: cm01.newcome.xyz
+    port: 7704
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id015
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
+    type: ssr
+    server: cm01.newcome.xyz
+    port: 7709
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id016
+    name: 🇨🇳_CN_中国
+    type: ssr
+    server: cm01.newcome.xyz
+    port: 7708
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id017
+    name: 🇮🇪_IE_爱尔兰
+    type: trojan
+    server: 54.217.246.11
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
     skip-cert-verify: true
-    servername: golinkwuxian.top
+    network: tcp
+  - &id018
+    name: 🇬🇧_GB_英国_3
+    type: trojan
+    server: 18.168.178.12
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    skip-cert-verify: true
+    network: tcp
+  - &id019
+    name: 🇬🇧_GB_英国_4
+    type: trojan
+    server: 18.132.109.205
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    skip-cert-verify: true
+    network: tcp
+  - &id020
+    name: 🇺🇸_US_美国_4
+    type: trojan
+    server: ssrsub.t08.trojan.tel
+    port: 80
+    udp: true
+    password: 4bfa6b63-ebd8-4e32-aac0-c9e7efd1c97f
+    sni: sourceforge.net
+    skip-cert-verify: true
+    network: tcp
+  - &id021
+    name: 🇺🇸_US_美国_5
+    type: trojan
+    server: 192.9.132.73
+    port: 80
+    udp: true
+    password: 4bfa6b63-ebd8-4e32-aac0-c9e7efd1c97f
+    sni: sourceforge.net
+    skip-cert-verify: true
+    network: tcp
+  - &id022
+    name: 🇫🇷_FR_法国_5
+    type: ss
+    server: 51.159.106.157
+    port: 6917
+    password: VV5v4GjMdKsNt8j0bfTW6y
+    cipher: chacha20-ietf-poly1305
+  - &id023
+    name: 🇺🇦_UA_乌克兰
+    type: ss
+    server: 95.164.89.142
+    port: 58603
+    password: 5UyVcx4jYrcbFwmhPkhzim
+    cipher: chacha20-ietf-poly1305
+  - &id024
+    name: 🇫🇷_FR_法国_6
+    type: ss
+    server: 54.36.174.181
+    port: 5600
+    password: Y6R9pAtvxxzmGC
+    cipher: aes-256-gcm
+  - &id025
+    name: 🇫🇷_FR_法国_7
+    type: ss
+    server: 54.36.174.181
+    port: 2375
+    password: faBAoD54k87UJG7
+    cipher: aes-256-gcm
+  - &id026
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: mm2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /apple
+      path: /
       headers:
-        host: 111.golinkwuxian.top
-  - &id009
-    name: 🇺🇸_US_美国_2
+        host: mm2.shabijichang.com
+  - &id027
+    name: 🇺🇸_US_美国_7
     type: vmess
     server: sbl2.shabijichang.com
     port: 80
@@ -118,296 +272,42 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id010
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 74.121.191.98
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id011
-    name: 🇦🇺_AU_澳大利亚
-    type: ss
-    server: au.doushimeng.com
-    port: 24652
-    password: a6e1ab27-ca7c-4836-b0ba-991b04958c9a
-    cipher: chacha20-ietf-poly1305
-  - &id012
-    name: 🇺🇸_US_美国_4
-    type: ss
-    server: us.doushimeng.com
-    port: 22853
-    password: a6e1ab27-ca7c-4836-b0ba-991b04958c9a
-    cipher: chacha20-ietf-poly1305
-  - &id013
-    name: 🇫🇷_FR_法国_2
-    type: ss
-    server: 51.158.195.96
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id014
-    name: 🇫🇷_FR_法国_3
-    type: ss
-    server: 51.158.195.96
-    port: 110
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id015
-    name: 🇫🇷_FR_法国_4
-    type: ss
-    server: 51.158.195.96
-    port: 80
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id016
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: ss
-    server: 62.113.114.116
-    port: 42320
-    password: dhXDSrO3HnkhOZWxNOrvII
-    cipher: chacha20-ietf-poly1305
-  - &id017
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: ssr
-    server: 112.16.244.101
-    port: 5501
-    password: renzhecloud
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 277272:LzSb2q
-  - &id018
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: ssr
-    server: 112.16.244.101
-    port: 5500
-    password: renzhecloud
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 277272:LzSb2q
-  - &id019
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: ssr
-    server: 112.16.244.108
-    port: 5503
-    password: renzhecloud
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 277272:LzSb2q
-  - &id020
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
-    type: ssr
-    server: cm01.newcome.xyz
-    port: 7709
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id021
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
-    type: ssr
-    server: cm01.newcome.xyz
-    port: 7701
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id022
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_6
-    type: ssr
-    server: cm01.newcome.xyz
-    port: 7708
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id023
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_7
-    type: ssr
-    server: cm01.newcome.xyz
-    port: 7704
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id024
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_8
-    type: ssr
-    server: cm01.newcome.xyz
-    port: 7700
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id025
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_9
-    type: ssr
-    server: cm01.newcome.xyz
-    port: 7703
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id026
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_10
-    type: ssr
-    server: 120.240.88.111
-    port: 7707
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id027
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_11
-    type: ssr
-    server: 120.240.88.111
-    port: 7701
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
   - &id028
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_12
-    type: ssr
-    server: 120.240.88.111
-    port: 7706
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id029
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_13
-    type: ssr
-    server: 120.240.88.111
-    port: 7709
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id030
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_14
-    type: ssr
-    server: pr3.jymzffbquawl.com
-    port: 5501
-    password: renzhecloud
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 277272:LzSb2q
-  - &id031
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_15
-    type: ssr
-    server: bs4.jymzffbquawl.com
-    port: 5502
-    password: renzhecloud
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 277272:LzSb2q
-  - &id032
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_16
-    type: ssr
-    server: bs3.jymzffbquawl.com
-    port: 5502
-    password: renzhecloud
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 277272:LzSb2q
-  - &id033
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_17
-    type: ssr
-    server: bs4.jymzffbquawl.com
-    port: 5503
-    password: renzhecloud
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 277272:LzSb2q
-  - &id034
-    name: 🇩🇪_DE_德国
+    name: 🇨🇦_CA_加拿大
     type: vmess
-    server: 45.155.249.17
-    port: 80
+    server: 23.227.39.84
+    port: 8080
     cipher: auto
-    uuid: 9fd713f3-0896-4d67-8a97-038b388ee017
+    uuid: 969f1909-c0d3-4c30-813d-3aec5c838b7d
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
-  - &id035
-    name: 🇺🇸_US_美国_5
-    type: trojan
-    server: ssrsub.t18.trojan.tel
-    port: 80
-    udp: true
-    password: c78452f0-8489-43d8-87c6-68e55e3ce245
-    sni: ssrsub.t18.trojan.tel
-    skip-cert-verify: true
-    network: tcp
-  - &id036
-    name: 🇸🇬_SG_新加坡->🇺🇸_US_美国
-    type: trojan
-    server: usa.liangyuandiancloud.com
-    port: 443
-    udp: true
-    password: 45a99be4-8cb4-4df2-b7a4-42f1a8dea5c1
-    skip-cert-verify: true
-    network: tcp
-  - &id037
-    name: 🇫🇷_FR_法国_5
-    type: ss
-    server: 162.19.59.169
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id038
-    name: 🇳🇱_NL_荷兰
-    type: vmess
-    server: 188.114.98.0
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: linkvws
+      path: /1IKYjV0r/
       headers:
-        host: odelia.autos
+        host: dongtaiwang13.dtku47.xyz
+  - &id029
+    name: 🇫🇷_FR_法国_8
+    type: ss
+    server: 54.36.174.181
+    port: 8119
+    password: cdBIDV42DCwnfIN
+    cipher: aes-256-gcm
+  - &id030
+    name: 🇫🇷_FR_法国_9
+    type: ss
+    server: 54.36.174.181
+    port: 6697
+    password: TEzjfAYq2IjtuoS
+    cipher: aes-256-gcm
+  - &id031
+    name: 🇫🇷_FR_法国_10
+    type: ss
+    server: 54.36.174.181
+    port: 6679
+    password: TEzjfAYq2IjtuoS
+    cipher: aes-256-gcm
 proxy-groups:
   - name: PROXY
     type: select
@@ -465,13 +365,6 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -508,13 +401,6 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
   - name: SELECT
     type: select
     proxies:
@@ -549,13 +435,6 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
