--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,64 +6,106 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
-    type: vmess
-    server: mm3.shabijichang.com
+    name: 🇺🇸_US_美国_1
+    type: trojan
+    server: ssrsub.t08.trojan.tel
     port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
+    udp: true
+    password: 4bfa6b63-ebd8-4e32-aac0-c9e7efd1c97f
+    sni: sourceforge.net
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mm3.shabijichang.com
+    network: tcp
   - &id002
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
-    type: vmess
-    server: mrb2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
+    name: 🇮🇪_IE_爱尔兰
+    type: trojan
+    server: 54.217.246.11
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mrb2.shabijichang.com
+    network: tcp
   - &id003
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
-    type: vmess
-    server: mm2.shabijichang.com
+    name: 🇺🇸_US_美国_2
+    type: trojan
+    server: 192.9.132.73
     port: 80
+    udp: true
+    password: 4bfa6b63-ebd8-4e32-aac0-c9e7efd1c97f
+    sni: sourceforge.net
+    skip-cert-verify: true
+    network: tcp
+  - &id004
+    name: 🇬🇧_GB_英国_1
+    type: trojan
+    server: 18.132.109.205
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    skip-cert-verify: true
+    network: tcp
+  - &id005
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 172.67.229.10
+    port: 2095
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: 617c9bc4-4116-41c6-99e0-ace49a38fcdb
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /Jnv8ViZOUVgijjOh0p5uGjHnXIiY
       headers:
-        host: mm2.shabijichang.com
-  - &id004
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
+        host: fr4.v2-teh.fun
+  - &id006
+    name: 🇬🇧_GB_英国_2
     type: vmess
-    server: 156.225.67.96
+    server: 172.99.190.109
     port: 443
     cipher: auto
-    uuid: 5a4d69ad-20a9-4941-b223-87bbd09f5f52
-    alterId: 64
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /path/1696251693048
-  - &id005
+      path: linkvws
+  - &id007
+    name: 🇬🇧_GB_英国_3
+    type: trojan
+    server: 18.168.178.12
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    skip-cert-verify: true
+    network: tcp
+  - &id008
+    name: 🇫🇷_FR_法国
+    type: trojan
+    server: 35.181.180.226
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id009
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 172.67.229.39
+    port: 8880
+    cipher: auto
+    uuid: 617c9bc4-4116-41c6-99e0-ace49a38fcdb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /Jnv8ViZOUVgijjOh0p5uGjHnXIiY
+      headers:
+        host: fr7.tehme100.fun
+  - &id010
     name: 🇳🇱_NL_荷兰
     type: vmess
     server: 154.85.1.130
@@ -76,36 +118,6 @@ proxies:
     network: ws
     ws-opts:
       path: /path/1698843555400
-  - &id006
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 104.22.75.105
-    port: 8880
-    cipher: auto
-    uuid: 617c9bc4-4116-41c6-99e0-ace49a38fcdb
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /Jnv8ViZOUVgijjOh0p5uGjHnXIiY
-      headers:
-        host: fr7.tehme100.fun
-  - &id007
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: sbl2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl2.shabijichang.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -139,6 +151,9 @@ proxy-groups:
       - *id005
       - *id006
       - *id007
+      - *id008
+      - *id009
+      - *id010
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -151,6 +166,9 @@ proxy-groups:
       - *id005
       - *id006
       - *id007
+      - *id008
+      - *id009
+      - *id010
   - name: SELECT
     type: select
     proxies:
@@ -161,6 +179,9 @@ proxy-groups:
       - *id005
       - *id006
       - *id007
+      - *id008
+      - *id009
+      - *id010
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
